Connected rotation to scroll wheel and text of single events.

--- a/galaxy_viz/test.html
+++ b/galaxy_viz/test.html
@@ -18,6 +18,8 @@
     <header>
     </header>
     <div id="main" role="main"></div>
+
+    <div id="caption">2019 - DOTASTRONOMY TORONTO</div>
     <footer>
       <p></p>
     </footer>
